添加 ReviewVerdict 和 SqlSourceType 枚举，创建 PrReviewService 和 DefenseShowcaseService 接口，新增多个控制器和测试类，更新 SQL 模式文件